--- a/styles.css
+++ b/styles.css
@@ -4,26 +4,65 @@
     box-sizing: border-box;
 }
 
+li {
+    list-style-type: none;
+}
+
 body {
     height: 100vh;
     width: 100vw;
     display: grid;
-    grid-template-columns: 1fr 4fr;
-    grid-template-rows: 1fr 5fr;
+    grid-template-columns: 1fr 5fr;
+    grid-template-rows: 1fr 4fr;
 }
 
-.content, nav, header {            /* Delete later just used for visibility */
+.content, nav, header, nav .logo, nav .menu, nav .menu2,
+ header .headerMain, header .headerTop, .headerTop *, .headerMain * {            /* Delete later just used for visibility */
     border: 1px solid black;
 }
 
 nav {
     grid-column: 1 / 2;
     grid-row: 1 / 3;
+
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 2fr 6fr 9fr;
 }
+
+nav .logo {
+    grid-row: 1 / 2;
+}
+
+nav .menu {
+    grid-row: 2 / 3;
+}
+
+nav .menu2 {
+    grid-row: 3 / 4;
+} 
 
 header {
     grid-column: 2 / 3;
     grid-row: 1 / 2;
+
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 2fr;
+}
+
+header .headerTop {
+    grid-row: 1 / 2;
+
+    display: grid;
+    grid-template-columns: 2fr 20fr 1fr 2fr 5fr;
+}
+
+header .headerMain {
+    grid-row: 2 / 3;
+    
+    display: grid;
+    grid-template-columns: 2fr 15fr 3fr 3fr 4fr;     
 }
 
 .content {
