--- a/styles.css
+++ b/styles.css
@@ -12,12 +12,12 @@ body {
     height: 100vh;
     width: 100vw;
     display: grid;
-    grid-template-columns: 1fr 5fr;
-    grid-template-rows: 1fr 4fr;
+    grid-template-columns: 3fr 10fr;
+    grid-template-rows: minmax(15vh, 1fr) 4fr;
 }
 
 .content, nav, header, nav .logo, nav .menu, nav .menu2,
- header .headerMain, header .headerTop, .headerTop *, .headerMain * {            /* Delete later just used for visibility */
+ header .headerMain, header .headerTop, .headerTop *, .headerMain *, .content *, nav * {            /* Delete later just used for visibility */
     border: 1px solid black;
 }
 
@@ -27,7 +27,7 @@ nav {
 
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 2fr 6fr 9fr;
+    grid-template-rows: 1.5fr 7fr 6fr;
 }
 
 nav .logo {
@@ -36,11 +36,23 @@ nav .logo {
 
 nav .menu {
     grid-row: 2 / 3;
+
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(7, 1fr);
 }
 
 nav .menu2 {
     grid-row: 3 / 4;
+
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(3, 1fr) 4fr;
 } 
+
+.logo, .menu, .menu2 li {
+    padding-left: 7%;
+}
 
 header {
     grid-column: 2 / 3;
@@ -68,4 +80,69 @@ header .headerMain {
 .content {
     grid-column: 2 / 3;
     grid-row: 2 / 3;
+
+    display: grid;
+    grid-template-columns: 5fr 2fr;
+    grid-template-rows: 1fr 1fr;
+}
+
+.content .projectsContainer {
+    grid-column: 1 / 2;
+    grid-row: 1 / 3;    
+}
+
+.contentHeader, .announcements, .trending {
+    padding: 20px 30px 0 30px;
+}
+
+.content .projects {
+
+
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(330px, 1fr));
+    grid-template-rows: repeat(3, minmax(200px, 1fr));
+    grid-auto-rows: 1fr;
+    gap: 25px;
+    padding: 30px;
+    /* overflow: auto; */
+    margin-bottom: 2%;
+
+}
+
+.project {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 3fr 1fr;
+    padding: 5%;
+    border-radius: 10px;
+}
+
+.content .announcements {
+    grid-column: 2 / 3;
+    grid-row: 1 / 2;        
+}
+
+.annContainer {
+    
+    height: 86%;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    border-radius: 20px;
+    padding: 5%;
+
+}
+
+.content .trending {
+    grid-column: 2 / 3;
+    grid-row: 2 / 3;
+}
+
+.trenContainer {
+    height: 86%;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr;
+    border-radius: 20px;
+    padding: 5%;
 }
