--- a/styles.css
+++ b/styles.css
@@ -2,10 +2,16 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Courier New', Courier, monospace;
 }
 
 li {
     list-style-type: none;
+}
+
+a {
+    text-decoration: none;
+    color: black;
 }
 
 body {
@@ -40,6 +46,7 @@ nav .menu {
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: repeat(7, 1fr);
+    
 }
 
 nav .menu2 {
@@ -48,10 +55,26 @@ nav .menu2 {
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: repeat(3, 1fr) 4fr;
+    
 } 
 
-.logo, .menu, .menu2 li {
+.logo, .menu li, .menu2 li {
     padding-left: 7%;
+    font-size: 25px;
+    display: flex;
+    align-items: center;
+}
+
+.icon {    
+    width: 30px;
+    vertical-align: middle;   
+    padding-bottom: 5px; 
+}
+
+.dashIcon {
+    width: 50px;
+    vertical-align: middle;   
+    padding-bottom: 5px;
 }
 
 header {
