--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,7 @@ a {
 body {
     height: 100vh;
     width: 100vw;
+    padding-top: 2vh;
     display: grid;
     grid-template-columns: 3fr 10fr;
     grid-template-rows: minmax(15vh, 1fr) 4fr;
@@ -24,7 +25,7 @@ body {
 
 .content, nav, header, nav .logo, nav .menu, nav .menu2,
  header .headerMain, header .headerTop, .headerTop *, .headerMain *, .content *, nav * {            /* Delete later just used for visibility */
-    border: 1px solid black;
+    /* border: 1px solid black; */
 }
 
 nav {
@@ -65,16 +66,25 @@ nav .menu2 {
     align-items: center;
 }
 
+.logo {
+    align-items: flex-start;
+}
+
+.logo p {
+    padding-top: 1.5vh;
+}
+
 .icon {    
     width: 30px;
     vertical-align: middle;   
     padding-bottom: 5px; 
+    margin-right: 50px;
 }
 
 .dashIcon {
-    width: 50px;
-    vertical-align: middle;   
+    width: 50px;   
     padding-bottom: 5px;
+    margin-right: 30px;
 }
 
 header {
@@ -93,11 +103,111 @@ header .headerTop {
     grid-template-columns: 2fr 20fr 1fr 2fr 5fr;
 }
 
+.magGlass {    
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+}
+
+.searchIcon {
+    width: 40px;
+}
+
+.search {
+    display: flex;
+    align-items: center;
+}
+
+.search input {
+    width: 70%;
+    height: 65%;
+    margin-left: 5%;
+    border-radius: 15px;
+    background-color: rgb(245, 245, 245);
+    border: none;
+    padding-left: 1%;
+}
+
+.search input:focus {
+    box-shadow: rgba(96, 223, 255, 0.74) 0px 0px 7px;
+    outline: none;
+}
+
+.notification {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.bellIcon {
+    width: 30px;
+}
+
+.profilePic {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.profPic {
+    height: 50px;
+}
+
+.name {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    font-size: larger;
+    font-weight: bold;
+}
+
+.mainProPic {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+}
+
+.bigProfPic {
+    height: 80px;
+}
+
+.greeting {
+    padding-top: 2vh;
+    padding-left: 1vw;
+}
+
+.greeting h5 {
+    font-size: 14px;
+}
+
+.greeting p {
+    margin-top: 0.5vh;
+    font-size: 34px;
+    font-weight: bold;
+}
+
+.newBut, .uploadBut, .shareBut {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.headerBut {
+    width: 65%;
+    border-radius: 30px;
+    height: 50%;
+    background-color: rgb(0, 153, 255);
+    border: none;
+    color: white;
+    font-size: 16px;
+    font-weight: bold;
+}
+
 header .headerMain {
     grid-row: 2 / 3;
     
     display: grid;
-    grid-template-columns: 2fr 15fr 3fr 3fr 4fr;     
+    grid-template-columns: 2fr 15fr 3fr 3fr 3fr 1fr;     
 }
 
 .content {
@@ -122,12 +232,12 @@ header .headerMain {
 
 
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(330px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(310px, 1fr));
     grid-template-rows: repeat(3, minmax(200px, 1fr));
     grid-auto-rows: 1fr;
-    gap: 25px;
+    gap: 35px;
     padding: 30px;
-    /* overflow: auto; */
+    overflow: auto;    
     margin-bottom: 2%;
 
 }
@@ -169,3 +279,4 @@ header .headerMain {
     border-radius: 20px;
     padding: 5%;
 }
+
