--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,6 @@
-*, *::after, *::before {
+*,
+*::after,
+*::before {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -17,16 +19,12 @@ a {
 body {
     height: 100vh;
     width: 100vw;
-    padding-top: 2vh;
+
     display: grid;
     grid-template-columns: 3fr 10fr;
-    grid-template-rows: minmax(15vh, 1fr) 4fr;
+    grid-template-rows: 16vh 4fr;
 }
 
-.content, nav, header, nav .logo, nav .menu, nav .menu2,
- header .headerMain, header .headerTop, .headerTop *, .headerMain *, .content *, nav * {            /* Delete later just used for visibility */
-    /* border: 1px solid black; */
-}
 
 nav {
     grid-column: 1 / 2;
@@ -35,6 +33,8 @@ nav {
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: 1.5fr 7fr 6fr;
+    background-color: rgb(0, 114, 207);
+    padding-top: 2vh;
 }
 
 nav .logo {
@@ -47,7 +47,7 @@ nav .menu {
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: repeat(7, 1fr);
-    
+
 }
 
 nav .menu2 {
@@ -56,10 +56,12 @@ nav .menu2 {
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: repeat(3, 1fr) 4fr;
-    
-} 
 
-.logo, .menu li, .menu2 li {
+}
+
+.logo,
+.menu li,
+.menu2 li {
     padding-left: 7%;
     font-size: 25px;
     display: flex;
@@ -74,15 +76,15 @@ nav .menu2 {
     padding-top: 1.5vh;
 }
 
-.icon {    
+.icon {
     width: 30px;
-    vertical-align: middle;   
-    padding-bottom: 5px; 
+    vertical-align: middle;
+    padding-bottom: 5px;
     margin-right: 50px;
 }
 
 .dashIcon {
-    width: 50px;   
+    width: 50px;
     padding-bottom: 5px;
     margin-right: 30px;
 }
@@ -94,6 +96,9 @@ header {
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: 1fr 2fr;
+    padding-top: 2vh;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    z-index: 1;
 }
 
 header .headerTop {
@@ -103,7 +108,7 @@ header .headerTop {
     grid-template-columns: 2fr 20fr 1fr 2fr 5fr;
 }
 
-.magGlass {    
+.magGlass {
     display: flex;
     justify-content: flex-end;
     align-items: center;
@@ -168,7 +173,7 @@ header .headerTop {
 }
 
 .bigProfPic {
-    height: 80px;
+    height: 65px;
 }
 
 .greeting {
@@ -182,11 +187,13 @@ header .headerTop {
 
 .greeting p {
     margin-top: 0.5vh;
-    font-size: 34px;
+    font-size: 26px;
     font-weight: bold;
 }
 
-.newBut, .uploadBut, .shareBut {
+.newBut,
+.uploadBut,
+.shareBut {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -205,9 +212,9 @@ header .headerTop {
 
 header .headerMain {
     grid-row: 2 / 3;
-    
+
     display: grid;
-    grid-template-columns: 2fr 15fr 3fr 3fr 3fr 1fr;     
+    grid-template-columns: 2fr 15fr 3fr 3fr 3fr 1fr;
 }
 
 .content {
@@ -217,29 +224,32 @@ header .headerMain {
     display: grid;
     grid-template-columns: 5fr 2fr;
     grid-template-rows: 1fr 1fr;
+    background-color: rgb(236, 236, 236);
 }
 
 .content .projectsContainer {
     grid-column: 1 / 2;
-    grid-row: 1 / 3;    
+    grid-row: 1 / 3;
 }
 
-.contentHeader, .announcements, .trending {
-    padding: 20px 30px 0 30px;
+.contentHeader {
+    padding: 40px 30px 0 30px;
+}
+
+.announcements,
+.trending {
+    padding: 20px 30px 15px 30px;
 }
 
 .content .projects {
-
-
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(310px, 1fr));
-    grid-template-rows: repeat(3, minmax(200px, 1fr));
+    grid-template-rows: 1fr;
     grid-auto-rows: 1fr;
     gap: 35px;
-    padding: 30px;
-    overflow: auto;    
-    margin-bottom: 2%;
-
+    padding: 30px 30px 0 30px;
+    overflow: auto;
+    padding-bottom: 2%;
 }
 
 .project {
@@ -248,22 +258,48 @@ header .headerMain {
     grid-template-rows: 3fr 1fr;
     padding: 5%;
     border-radius: 10px;
+    min-height: 192px;
+
+    background-color: white;
+    box-shadow: 5px 5px 8px -4px black;
+
+    position: relative;
+    z-index: 1;
+}
+
+.projectButt {
+    display: flex;
+    flex-direction: row-reverse;
+    gap: 20px;
+}
+
+.pButt {
+    width: 30px;
 }
 
 .content .announcements {
     grid-column: 2 / 3;
-    grid-row: 1 / 2;        
+    grid-row: 1 / 2;
+}
+
+.announcements>h3 {
+    padding: 23px 0 20px 0;
+}
+
+.trending>h3 {
+    padding-bottom: 10px;
 }
 
 .annContainer {
-    
+
     height: 86%;
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: 1fr 1fr 1fr;
     border-radius: 20px;
-    padding: 5%;
+    padding: 8%;
 
+    background-color: white;
 }
 
 .content .trending {
@@ -275,8 +311,69 @@ header .headerMain {
     height: 86%;
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
     border-radius: 20px;
     padding: 5%;
+
+    background-color: white;
 }
 
+.green-right {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 2%;
+    height: 100%;
+    background-color: rgb(214, 200, 0);
+    /* green color for the right 5% */
+    border-radius: 10px 0 0 10px;
+}
+
+.ann p {
+    font-size: 12px;
+}
+
+.ann>h3 {
+    padding-bottom: 1px;
+}
+
+.annmid,
+.trenmid {
+    border-top: 1px solid lightgrey;
+    border-bottom: 1px solid lightgrey;
+    padding: 5px 0 5px 0;
+}
+
+.trendPic {
+    height: 50px;
+    width: 50px;
+    /* vertical-align: middle; */
+}
+
+.trend {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.trendat {
+    display: flex;
+    flex-direction: column;
+    padding-left: 1vw;
+}
+
+/* .trend1 {
+    grid-row: 1 / 2;
+}
+
+.trend.trend2 {
+    grid-column: 2 / 3;
+}
+
+.trend3 {
+    grid-row: 3 / 4;
+} */
+
+.usrnam {
+    font-weight: bold;
+}
