--- a/styles.css
+++ b/styles.css
@@ -1,19 +1,27 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+
 *,
 *::after,
 *::before {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
-    font-family: 'Courier New', Courier, monospace;
+    box-sizing: border-box;    
 }
 
-li {
+.menu li, .menu2 li {
     list-style-type: none;
+    
+}
+
+.menu li:hover, .menu2 li:hover {
+    background-color: rgb(0, 91, 165);
+    border-radius: 15px;
+    transition: all 250ms ease-in;
 }
 
 a {
     text-decoration: none;
-    color: black;
+    color: white;
 }
 
 body {
@@ -21,8 +29,9 @@ body {
     width: 100vw;
 
     display: grid;
-    grid-template-columns: 3fr 10fr;
-    grid-template-rows: 16vh 4fr;
+    grid-template-columns: minmax(289px, 3fr) 10fr;
+    grid-template-rows: 0.8fr 4fr;
+    font-family: 'Courier New', Courier, monospace;
 }
 
 
@@ -74,6 +83,7 @@ nav .menu2 {
 
 .logo p {
     padding-top: 1.5vh;
+    color: white;
 }
 
 .icon {
@@ -99,6 +109,7 @@ header {
     padding-top: 2vh;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
     z-index: 1;
+    min-height: 138px;
 }
 
 header .headerTop {
@@ -210,6 +221,12 @@ header .headerTop {
     font-weight: bold;
 }
 
+.headerBut:hover {
+    background-color: rgb(0, 91, 165);
+    cursor: pointer;
+    transition: all 250ms ease-in;
+}
+
 header .headerMain {
     grid-row: 2 / 3;
 
@@ -222,9 +239,10 @@ header .headerMain {
     grid-row: 2 / 3;
 
     display: grid;
-    grid-template-columns: 5fr 2fr;
+    grid-template-columns: 5fr minmax(318px, 2fr);
     grid-template-rows: 1fr 1fr;
     background-color: rgb(236, 236, 236);
+    font-family: 'Roboto', sans-serif;
 }
 
 .content .projectsContainer {
@@ -337,6 +355,12 @@ header .headerMain {
     padding-bottom: 1px;
 }
 
+.ann {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
 .annmid,
 .trenmid {
     border-top: 1px solid lightgrey;
@@ -347,7 +371,6 @@ header .headerMain {
 .trendPic {
     height: 50px;
     width: 50px;
-    /* vertical-align: middle; */
 }
 
 .trend {
@@ -361,18 +384,6 @@ header .headerMain {
     flex-direction: column;
     padding-left: 1vw;
 }
-
-/* .trend1 {
-    grid-row: 1 / 2;
-}
-
-.trend.trend2 {
-    grid-column: 2 / 3;
-}
-
-.trend3 {
-    grid-row: 3 / 4;
-} */
 
 .usrnam {
     font-weight: bold;
