--- a/styles.css
+++ b/styles.css
@@ -75,6 +75,7 @@ nav .menu2 {
     font-size: 25px;
     display: flex;
     align-items: center;
+    font-weight: bold;
 }
 
 .logo {
@@ -139,7 +140,7 @@ header .headerTop {
     height: 65%;
     margin-left: 5%;
     border-radius: 15px;
-    background-color: rgb(245, 245, 245);
+    background-color: rgb(235, 235, 235);
     border: none;
     padding-left: 1%;
 }
